--- a/Restaurant Manager Windows Applictaion/Restaurant Manager Windows Applictaion.csproj
+++ b/Restaurant Manager Windows Applictaion/Restaurant Manager Windows Applictaion.csproj
@@ -14,6 +14,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -24,6 +25,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,11 +38,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="MetroFramework">
@@ -78,85 +80,85 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Custom User Control\BarChartCategory.cs" />
+    <Compile Include="Entities\BarChartCategory.cs" />
     <Compile Include="Custom User Control\BarChartUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Custom User Control\BarChartUserControl.Designer.cs">
       <DependentUpon>BarChartUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Custom User Control\EmployeesUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Custom User Control\EmployeesUserControl.Designer.cs">
+      <DependentUpon>EmployeesUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Custom User Control\ReceiptUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Custom User Control\ReceiptUserControl.Designer.cs">
+      <DependentUpon>ReceiptUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Custom User Control\StatisticsUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Custom User Control\StatisticsUserControl.Designer.cs">
+      <DependentUpon>StatisticsUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Custom User Control\TablesUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Custom User Control\TablesUserControl.Designer.cs">
+      <DependentUpon>TablesUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Employee.cs" />
     <Compile Include="Entities\FoodItem.cs" />
     <Compile Include="Entities\Reservation.cs" />
     <Compile Include="Entities\Restaurant.cs" />
     <Compile Include="Entities\Table.cs" />
-    <Compile Include="Forms\EmployeesForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\EmployeesForm.Designer.cs">
-      <DependentUpon>EmployeesForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\MenuForm.cs">
-      <SubType>Form</SubType>
+    <Compile Include="Custom User Control\ReservationsUserControl.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Forms\MenuForm.Designer.cs">
-      <DependentUpon>MenuForm.cs</DependentUpon>
+    <Compile Include="Custom User Control\ReservationsUserControl.Designer.cs">
+      <DependentUpon>ReservationsUserControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ReceiptForm.cs">
-      <SubType>Form</SubType>
+    <Compile Include="Custom User Control\RestaurantMenuUserControl.cs">
+      <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Forms\ReceiptForm.Designer.cs">
-      <DependentUpon>ReceiptForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\ReservationsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\ReservationsForm.Designer.cs">
-      <DependentUpon>ReservationsForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\StatisticsForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\StatisticsForm.Designer.cs">
-      <DependentUpon>StatisticsForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\TablesForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\TablesForm.Designer.cs">
-      <DependentUpon>TablesForm.cs</DependentUpon>
+    <Compile Include="Custom User Control\RestaurantMenuUserControl.Designer.cs">
+      <DependentUpon>RestaurantMenuUserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Custom User Control\BarChartUserControl.resx">
       <DependentUpon>BarChartUserControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\EmployeesForm.resx">
-      <DependentUpon>EmployeesForm.cs</DependentUpon>
+    <EmbeddedResource Include="Custom User Control\EmployeesUserControl.resx">
+      <DependentUpon>EmployeesUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Custom User Control\ReceiptUserControl.resx">
+      <DependentUpon>ReceiptUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Custom User Control\StatisticsUserControl.resx">
+      <DependentUpon>StatisticsUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Custom User Control\TablesUserControl.resx">
+      <DependentUpon>TablesUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\MenuForm.resx">
-      <DependentUpon>MenuForm.cs</DependentUpon>
+    <EmbeddedResource Include="Custom User Control\ReservationsUserControl.resx">
+      <DependentUpon>ReservationsUserControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ReceiptForm.resx">
-      <DependentUpon>ReceiptForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ReservationsForm.resx">
-      <DependentUpon>ReservationsForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\StatisticsForm.resx">
-      <DependentUpon>StatisticsForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\TablesForm.resx">
-      <DependentUpon>TablesForm.cs</DependentUpon>
+    <EmbeddedResource Include="Custom User Control\RestaurantMenuUserControl.resx">
+      <DependentUpon>RestaurantMenuUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -199,6 +201,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\tables_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\home_icon.png" />
+    <None Include="Resources\home_icon1.png" />
+    <Content Include="Resources\menupicture.png" />
+    <None Include="Resources\menupicture1.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.105.2\build\net451\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.105.2\build\net451\System.Data.SQLite.Core.targets')" />
